@@ -32,6 +32,9 @@
     <module>hw09-ORM</module>
     <module>hw10-Hibernate</module>
     <module>hw11-cache</module>
+    <module>hw12-web</module>
+  </modules>
+
   <properties>
 
     <!--region General-->
@@ -39,13 +42,12 @@
     <jar.name>${project.name}-${revision}</jar.name>
     <revision>2019-12-SNAPSHOT</revision>
     <java.version>13</java.version>
-    <minimal.maven.version>3.6.0</minimal.maven.version>
+    <minimal.maven.version>3.6.1</minimal.maven.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <asm.version>3.0</asm.version>
     <!--endregion-->
     <!--region BOMs -->
-    <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
+    <spring-boot.version>2.2.6.RELEASE</spring-boot.version>
     <!--endregion-->
 
     <!--region Libs -->
@@ -57,12 +59,11 @@
     <annotations.version>17.0.0</annotations.version>
     <jcip-annotations.version>1.0</jcip-annotations.version>
     <spotbugs.version>4.0.0-beta3</spotbugs.version>
-    <lombok.version>1.18.8</lombok.version>
     <lang3.version>3.0</lang3.version>
-    <h2database.version>1.4.197</h2database.version>
-    <logback-classic.version>1.2.3</logback-classic.version>
-    <hibernate-core.version>5.4.4.Final</hibernate-core.version>
-    <asm.version>5.0.3</asm.version>
+    <asm.version>7.3.1</asm.version>
+    <jackson.version>2.9.9.3</jackson.version>
+    <javax.json.version>1.1.4</javax.json.version>
+    <protobuf.version>3.11.4</protobuf.version>
     <!--endregion-->
 
     <!--region testing - JUnit, AssertJ, Mockito, Hacrest -->
@@ -74,21 +75,46 @@
 
     <!--region Plugins-->
     <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-    <maven.compiler.parameters>true</maven.compiler.parameters>
     <maven.compiler.release>${java.version}</maven.compiler.release>
     <maven.compiler.parameters>true</maven.compiler.parameters>
-    <maven-assembly-plugin.version>3.1.1</maven-assembly-plugin.version>
-    <maven-assembly-plugin.descriptorSuffix>jar-with-dependencies</maven-assembly-plugin.descriptorSuffix>
-    <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
-    <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
+    <maven.compiler.forceJavacCompilerUse>true</maven.compiler.forceJavacCompilerUse>
+
+    <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
+    <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
     <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
+    <maven-assembly-plugin.version>3.2.0</maven-assembly-plugin.version>
+    <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
+    <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
+
     <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
     <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
     <exec.executable>java</exec.executable>
     <jar.name>${project.name}-${revision}</jar.name>
-    <lombok-maven-plugin.version>1.18.6.0</lombok-maven-plugin.version>
-    <jackson.version>2.9.9.3</jackson.version>
+
+    <lombok.version>1.18.12</lombok.version>
+    <lombok-maven-plugin.version>1.18.12.0</lombok-maven-plugin.version>
+    <lombok.verbose>true</lombok.verbose>
+    <lombok.addOutputDirectory>false</lombok.addOutputDirectory>
+    <lombok.sourceDirectory>${project.basedir}/src/main/java</lombok.sourceDirectory>
+    <lombok.testSourceDirectory>${project.basedir}/src/test/java</lombok.testSourceDirectory>
     <!--endregion-->
+
+    <!--region db-->
+    <h2database.version>1.4.197</h2database.version>
+    <hibernate-core.version>5.4.4.Final</hibernate-core.version>
+    <mongo.version>3.12.1</mongo.version>
+    <!--endregion-->
+
+    <!--region logs-->
+    <logback-classic.version>1.2.3</logback-classic.version>
+    <!--endregion-->
+
+    <!--region web-->
+    <jetty.version>9.4.27.v20200227</jetty.version>
+    <gson.version>2.8.5</gson.version>
+    <freemarker.version>2.3.28</freemarker.version>
+    <!--endregion-->
+    <protoc-jar-maven-plugin.version>3.11.4</protoc-jar-maven-plugin.version>
   </properties>
 
   <dependencyManagement>
@@ -209,7 +235,6 @@
         <scope>test</scope>
       </dependency>
       <!--endregion-->
-
     </dependencies>
   </dependencyManagement>
 
@@ -255,13 +280,10 @@
 
     <pluginManagement>
       <plugins>
-
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>${maven-compiler-plugin.version}</version>
           <configuration>
-            <release>${java.version}</release>
-            <parameters>true</parameters>
             <compilerArgs>
               <arg>--enable-preview</arg>
             </compilerArgs>
@@ -286,44 +308,10 @@
         <plugin>
           <artifactId>maven-assembly-plugin</artifactId>
           <version>${maven-assembly-plugin.version}</version>
-          <configuration>
-            <descriptorRefs>
-              <descriptorRef>${maven-assembly-plugin.descriptorSuffix}</descriptorRef>
-            </descriptorRefs>
-            <archive>
-              <manifest>
-                <mainClass>${exec.mainClass}</mainClass>
-              </manifest>
-            </archive>
-          </configuration>
-          <executions>
-            <execution>
-              <id>make-assembly</id>
-              <phase>package</phase>
-              <goals>
-                <goal>single</goal>
-              </goals>
-            </execution>
-          </executions>
         </plugin>
         <plugin>
           <artifactId>maven-enforcer-plugin</artifactId>
           <version>${maven-enforcer-plugin.version}</version>
-          <executions>
-            <execution>
-              <id>enforce-maven</id>
-              <goals>
-                <goal>enforce</goal>
-              </goals>
-              <configuration>
-                <rules>
-                  <requireMavenVersion>
-                    <version>${minimal.maven.version}</version>
-                  </requireMavenVersion>
-                </rules>
-              </configuration>
-            </execution>
-          </executions>
         </plugin>
         <plugin>
           <artifactId>maven-shade-plugin</artifactId>
@@ -344,29 +332,6 @@
             </execution>
           </executions>
         </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>versions-maven-plugin</artifactId>
-          <version>${versions-maven-plugin.version}</version>
-          <inherited>false</inherited>
-          <configuration>
-            <generateBackupPoms>false</generateBackupPoms>
-            <rulesUri>file://${basedir}/ruleset.xml</rulesUri>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>exec-maven-plugin</artifactId>
-          <version>${exec-maven-plugin.version}</version>
-          <configuration>
-            <arguments>
-              <argument>-jar</argument>
-              <argument>--enable-preview</argument>
-              <argument>target/${jar.name}-${maven-assembly-plugin.descriptorSuffix}.jar</argument>
-            </arguments>
-          </configuration>
-        </plugin>
-
       </plugins>
     </pluginManagement>
 
@@ -378,16 +343,7 @@
       <plugin>
         <artifactId>maven-enforcer-plugin</artifactId>
       </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>versions-maven-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-      </plugin>
-
-    </plugins>
+      </plugins>
 
   </build>
 </project>
